# wind_simulation

./: CMakeLists.txt  package.xml
src/: vel_publisher.cpp
urdf/: erlecopter_base.urdf  erlecopter_base.xacro
