cmake_minimum_required(VERSION 2.8.3)
project(wind_simulation)

#set(CMAKE_PREFIX_PATH "/usr/local/lib")

# Load catkin and all dependencies required for this package
find_package(catkin REQUIRED COMPONENTS
        roscpp
        image_transport
        cv_bridge
        mavros
        mav_msgs
        )

find_package(OpenCV REQUIRED)

include_directories(include ${catkin_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS}
        /usr/local/include/)

#
###################################
## catkin specific configuration ##
###################################

catkin_package(
        CATKIN_DEPENDS
        roscpp
        image_transport
        cv_bridge
        mavros
        mav_msgs
)


###########
## Build ##
###########

add_executable(vel_publisher src/vel_publisher.cpp)
target_link_libraries(vel_publisher ${catkin_LIBRARIES} ${GAZEBO_LIBRARIES} )



